[package]
name = "tfbd"
version = "0.1.0"
authors = ["Jim Ursetto <jim@3e8.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
byteorder = "1"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
